:wrench: chore: Mejorar reporte SonarQube